--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "28ce741d",
    "metadata": {},
    "source": [
     "# Data Cleaning"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "784757b1",
    "metadata": {},
    "source": [
     "### Import Libraries"
@@ -19,7 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "091bcccb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +32,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eda7c28c",
    "metadata": {},
    "source": [
     "### Read data from source Using pandas read_csv function"
@@ -44,7 +40,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cf05051f",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +63,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1ad7a2f",
    "metadata": {},
    "source": [
     "### Basic data Understanding"
@@ -77,7 +71,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "445ed3bc",
    "metadata": {
     "scrolled": true
    },
@@ -456,7 +449,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e00a01d4",
    "metadata": {
     "scrolled": true
    },
@@ -480,7 +472,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "77757b0e",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +526,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "76a0abb5",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +547,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "941e28ef",
    "metadata": {
     "scrolled": true
    },
@@ -611,7 +600,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bca91efe",
    "metadata": {},
    "source": [
     "### Drop Columns\n",
@@ -627,7 +615,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1ef80df3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +632,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee10af58",
    "metadata": {},
    "source": [
     "### Create a derived column - Month, from the Date Column\n",
@@ -655,7 +641,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "37c9a7b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +649,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbccb755",
    "metadata": {},
    "source": [
     "### Change Codes to Labels\n",
@@ -675,7 +659,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d2d65967",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +807,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "024bad20",
    "metadata": {
     "scrolled": true
    },
@@ -871,7 +853,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0b58cf8",
    "metadata": {},
    "source": [
     "### Fill Missing Values"
@@ -880,7 +861,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "eaf9abef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +870,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "505c24fd",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +913,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42036ac4",
    "metadata": {},
    "source": [
     "### Change the Time format to standard datetime format"
@@ -943,7 +921,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0bd98c91",
    "metadata": {
     "scrolled": true
    },
@@ -956,7 +933,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1982df73",
    "metadata": {
     "scrolled": true
    },
@@ -1277,7 +1253,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8a77dabc",
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1299,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "627c15ac",
    "metadata": {},
    "source": [
     "### Write the Cleaned data into a new csv file"
@@ -1333,7 +1307,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "45385f76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,7 +1318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1359,7 +1332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
