--- a/Exploratory_data_analysis.ipynb
+++ b/Exploratory_data_analysis.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4b675f96",
    "metadata": {},
    "source": [
     "# EXPLORATORY DATA ANALYSIS OF THE UK TRAFFIC ACCIDENT IN 2015"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fddfc5ad",
    "metadata": {},
    "source": [
     "DATA PREPARATION"
@@ -17,6 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "c5c4bfc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "ed9bd03e",
    "metadata": {},
    "outputs": [
     {
@@ -276,6 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "58892270",
    "metadata": {},
    "outputs": [
     {
@@ -711,6 +716,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9f15640",
    "metadata": {},
    "source": [
     "# EDA"
@@ -718,6 +724,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e7bbfebc",
    "metadata": {},
    "source": [
     "ANALYSIS WITH THE LEVEL OF SEVERITY"
@@ -726,6 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "29f5688a",
    "metadata": {},
    "outputs": [
     {
@@ -749,6 +757,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d322a72b",
    "metadata": {},
    "source": [
     "It is surprising to see that slight accident severity led to high number of casualties as against a fatal accident severity"
@@ -756,6 +765,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "71dc6140",
    "metadata": {},
    "source": [
     "ANALYSIS WITH SOME ROAD FEATURES"
@@ -764,6 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "2c3a4ffd",
    "metadata": {},
    "outputs": [
     {
@@ -787,6 +798,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3e604a9",
    "metadata": {},
    "source": [
     "Low Speed Limit (30 km/hr) of the vehicle resulted in more casualties as against the vehicle on high speed"
@@ -795,6 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "19634016",
    "metadata": {
     "scrolled": true
    },
@@ -820,6 +833,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0f00461b",
    "metadata": {},
    "source": [
     "A Single carriageway which could be a two-lane highway but with no barricade from vehicles coming in the opposite direction. It was observed that most of the accident occurred as a result of the single carriageway which would been an head-on collision with the vehicle coming in the opposite direction"
@@ -828,6 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "7a728eb2",
    "metadata": {},
    "outputs": [
     {
@@ -852,6 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "3a547afe",
    "metadata": {},
    "outputs": [
     {
@@ -872,6 +888,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7c1afb63",
    "metadata": {},
    "source": [
     "ANALYSIS WITH WEATHER CONDITIONS"
@@ -880,6 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "dacf70fe",
    "metadata": {},
    "outputs": [
     {
@@ -910,6 +928,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6ce4fb28",
    "metadata": {},
    "source": [
     "More accidents occurred in a \"fine no high wind\" condition possibly as a result of full confidence of a good weather condition and motorists were less careful "
@@ -918,6 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "ef132cc8",
    "metadata": {},
    "outputs": [
     {
@@ -941,6 +961,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8b9dc7b",
    "metadata": {},
    "source": [
     "ANALYSIS WITH THE AREA (I.E. URBAN OR RURAL)"
@@ -949,6 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "7309aeb6",
    "metadata": {},
    "outputs": [
     {
@@ -972,6 +994,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "07cc5621",
    "metadata": {},
    "source": [
     "Accident in UK at year 2015 happened more in Urban Area than in the Rural Area"
@@ -979,6 +1002,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8a7b9bff",
    "metadata": {},
    "source": [
     "ANALYSIS WITH VEHICLES"
@@ -987,6 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "1641d655",
    "metadata": {},
    "outputs": [
     {
@@ -1007,6 +1032,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b270ea46",
    "metadata": {},
    "source": [
     "High rate of casualties occurred between two vehicles. Therefore, the casualties most have resulted in collision "
@@ -1014,6 +1040,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7d5c9711",
    "metadata": {},
    "source": [
     "ANALYSIS WITH POLICE OFFICER ATTENDING THE ACCIDENT SCENE"
@@ -1022,6 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "6469ee0b",
    "metadata": {},
    "outputs": [
     {
@@ -1042,6 +1070,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "baff21e9",
    "metadata": {},
    "source": [
     "It is seen that for most accident that happened in UK (2015), police officer visited the scene more. This denote an activeness to rescue by the police force in the UK"
@@ -1049,6 +1078,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "78efde39",
    "metadata": {},
    "source": [
     "# To perform a HEATMAP PLOT on the dataset"
@@ -1057,6 +1087,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "4e518be7",
    "metadata": {},
    "outputs": [
     {
@@ -1137,6 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "6a59265c",
    "metadata": {},
    "outputs": [
     {
@@ -1216,6 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "27aaa130",
    "metadata": {},
    "outputs": [
     {
@@ -1527,6 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "8ec1d7fc",
    "metadata": {},
    "outputs": [
     {
@@ -1808,6 +1842,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "ff795dee",
    "metadata": {},
    "outputs": [
     {
@@ -2045,6 +2080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1621600c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2055,6 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "50325c38",
    "metadata": {},
    "outputs": [
     {
@@ -2090,6 +2127,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "83129005",
    "metadata": {},
    "source": [
     "More accident happened on Tuesday than any other day of the week in the year 2015 (UK). "
@@ -2097,6 +2135,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38c5dbd7",
    "metadata": {},
    "source": [
     "ANALYSIS WITH LIGHT CONDITION"
@@ -2104,6 +2143,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "235796e9",
    "metadata": {},
    "source": [
     "## Summary"
@@ -2111,6 +2151,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7b0a1510",
    "metadata": {},
    "source": [
     "Majority of the accideents occured on single carriageways, without any physical crossing facilities within 50 meters and in day light, when there were no high winds and the roads were dry. So most natural factors weren't the causes of majority of this accidents but instead we can say that the single carriage ways had a huge part to play"
@@ -2119,7 +2160,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2133,7 +2174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
