--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f24ca3ba",
    "metadata": {},
    "source": [
     "# Data Cleaning"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "80b61552",
    "metadata": {},
    "source": [
     "### Import Libraries"
@@ -17,6 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "c280189f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +35,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb87c8ee",
    "metadata": {},
    "source": [
     "### Read data from source Using pandas read_csv function"
@@ -40,6 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4386b40b",
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +68,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aebff670",
    "metadata": {},
    "source": [
     "### Basic data Understanding"
@@ -71,6 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "9a89a4e8",
    "metadata": {
     "scrolled": true
    },
@@ -449,6 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "b64b3bbe",
    "metadata": {
     "scrolled": true
    },
@@ -472,6 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "68d5e14a",
    "metadata": {},
    "outputs": [
     {
@@ -526,6 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "99ad98db",
    "metadata": {},
    "outputs": [
     {
@@ -547,6 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "2635e2a7",
    "metadata": {
     "scrolled": true
    },
@@ -600,6 +611,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e33999ca",
    "metadata": {},
    "source": [
     "### Drop Columns\n",
@@ -615,6 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "6ca2c7d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,6 +645,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a128f13",
    "metadata": {},
    "source": [
     "### Create a derived column - Month, from the Date Column\n",
@@ -641,6 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "7f322b9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,6 +664,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b4961893",
    "metadata": {},
    "source": [
     "### Change Codes to Labels\n",
@@ -659,6 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "49214935",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,6 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "4cbbf614",
    "metadata": {
     "scrolled": true
    },
@@ -853,6 +871,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "93c5b428",
    "metadata": {},
    "source": [
     "### Fill Missing Values"
@@ -861,6 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "f1047165",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,6 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "fc92fdd5",
    "metadata": {},
    "outputs": [
     {
@@ -913,6 +934,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "786c8921",
    "metadata": {},
    "source": [
     "### Change the Time format to standard datetime format"
@@ -921,6 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "1e1836ea",
    "metadata": {
     "scrolled": true
    },
@@ -933,6 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "bd0926b6",
    "metadata": {
     "scrolled": true
    },
@@ -1253,6 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "e15620af",
    "metadata": {},
    "outputs": [
     {
@@ -1299,6 +1324,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d487552",
    "metadata": {},
    "source": [
     "### Write the Cleaned data into a new csv file"
@@ -1307,6 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "0cb19904",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1332,7 +1359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
